--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 
   * {
-    font-family: 'Merchant';
+    font-family: 'Merchant',sans-serif;
     margin:0;
     padding:0;
     box-sizing: border-box;
